Add configurable "Open Access" hours.

--- a/src/websrc/esprfid.htm
+++ b/src/websrc/esprfid.htm
@@ -251,6 +251,22 @@
             </select>
         </span>
     </div>
+
+    <div class="row form-group">
+        <label class="col-xs-3">Open Access Start<i style="margin-left: 10px;" class="glyphicon glyphicon-info-sign" aria-hidden="true" data-toggle="popover" data-trigger="hover" data-placement="right" data-content="Time when doors are automatically unlocked each day ('-1' for never)."></i></label>
+        <span class="col-xs-9 col-md-5">
+            <input class="form-control input-sm" value="-1" id="openAccessStart" type="text">
+        </span>
+    </div>
+
+    <div class="row form-group">
+        <label class="col-xs-3">Open Access End<i style="margin-left: 10px;" class="glyphicon glyphicon-info-sign" aria-hidden="true" data-toggle="popover" data-trigger="hover" data-placement="right" data-content="Time when doors are automatically locked each day ('-1' for never)."></i></label>
+        <span class="col-xs-9 col-md-5">
+            <input class="form-control input-sm" value="-1" id="openAccessEnd" type="text">
+        </span>
+    </div>
+
+
     <hr>
     <div class="row form-group">
         <label class="col-xs-3">Number of relays<i style="margin-left: 10px;" class="glyphicon glyphicon-info-sign" aria-hidden="true" data-toggle="popover" data-trigger="hover" data-placement="right" data-content="Choose how many relays your board has"></i></label>
